
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffffff"
    android:gravity="bottom">

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:weightSum="1"
        android:gravity="center_horizontal|bottom"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:id="@+id/Barrinha"
            android:max="100"
            android:progress="50"
            android:layout_weight="0.5"
            android:paddingLeft="20dp"
            android:paddingRight="0dp" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/Barrinha2"
            android:max="100"
            android:progress="50"
            android:layout_weight="0.5"
            android:paddingRight="20dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/LinearLayout2"
        android:gravity="center"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp" >

            <TextView
                android:id="@+id/TextView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvAutonomy"
                android:layout_alignBottom="@+id/tvAutonomy"
                android:layout_toRightOf="@+id/tvAutonomy"
                android:text="@string/Time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/TextView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Autonomy"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvAutonomy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView21"
                android:text="@string/Unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/txtdimen2"
                android:typeface="monospace"
                android:textColor="#ff000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50sp">

            <TextView
                android:id="@+id/TextView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvVelocity"
                android:layout_alignBottom="@+id/tvVelocity"
                android:layout_toRightOf="@+id/tvVelocity"
                android:text="@string/Vel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/TextView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Velocity"
                android:typeface="monospace"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvVelocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView17"
                android:text="@string/Unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/txtdimen2"
                android:typeface="monospace"
                android:textColor="#ff000000" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="25sp"
        android:paddingTop="25sp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/LinearLayout2"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50sp"
            android:visibility="visible"
            android:id="@+id/RLTensao">

            <TextView
                android:id="@+id/TextView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvVoltageBattery"
                android:layout_alignBottom="@+id/tvVoltageBattery"
                android:layout_toRightOf="@+id/tvVoltageBattery"
                android:text="@string/Volts"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/TextView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Voltage.Bat"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvVoltageBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView18"
                android:text="@string/Unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/txtdimen1"
                android:typeface="monospace"
                android:textColor="#ff000000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50sp"
            android:id="@+id/RLTempEle"
            android:visibility="visible">

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvTemperatureBattery"
                android:layout_alignBottom="@+id/tvTemperatureBattery"
                android:layout_toRightOf="@+id/tvTemperatureBattery"
                android:text="@string/Celsius"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/TextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Temp.Eletronica"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvTemperatureBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView12"
                android:text="@string/Unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/txtdimen1"
                android:typeface="monospace"
                android:textColor="#ff000000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50sp"
            android:id="@+id/RLTempMotor"
            android:visibility="visible">

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvTemperatureMotor"
                android:layout_alignBottom="@+id/tvTemperatureMotor"
                android:layout_toRightOf="@+id/tvTemperatureMotor"
                android:text="@string/Celsius"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Temp.Motor"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvTemperatureMotor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView10"
                android:text="@string/Unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/txtdimen1"
                android:typeface="monospace"
                android:textColor="#ff000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50sp"
            android:id="@+id/RLPot"
            android:visibility="visible">

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvPot"
                android:layout_alignBottom="@+id/tvPot"
                android:layout_toRightOf="@+id/tvPot"
                android:text="@string/Watts"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/TextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Power"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:typeface="monospace"
                android:textColor="#ff000000"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/tvPot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView6"
                android:text="@string/Unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/txtdimen1"
                android:typeface="monospace"
                android:textColor="#ff000000"/>

        </RelativeLayout>

    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="TituloLoggerOnOff"
        android:text="@string/SwitchName"
        android:textColor="#f00"/>

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:id="@+id/RLLogger"
        android:visibility="invisible"
        android:background="@android:drawable/picture_frame"
        android:layout_below="@+id/switch1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp">

        <TextView
            android:id="@+id/TextView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logger"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/editText"
            android:inputType="textShortMessage"
            android:layout_below="@+id/TextView22"
            android:layout_alignParentLeft="true"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:layout_toLeftOf="@+id/button"
            android:text="@string/DefaultTitle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OkButton"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentRight="true"
            android:onClick="TituloOk"/>

    </RelativeLayout>

</RelativeLayout>